--- a/tengahmalem.css
+++ b/tengahmalem.css
@@ -303,7 +303,7 @@
 	display: none;
 }
 .wordmarkWindows-2dq6rw::after {
-	content: 'Discord Mod | Edit with 💕 by Asa';
+	content: 'Discord 💕 by Asa';
 	display: block;
 	position: relative;
 	width: 200px;
